# src/routes/api/users.js
@@ -1,6 +1,6 @@
 const router = require('express').Router();
 const { getAll, edit, getById } = require('../../controllers/users.controller');
-const { register, login } = require('../../controllers/loginregistro.controller');
+const { register, login , changePassword } = require('../../controllers/loginregistro.controller');
 const { checkToken } = require('../../middlewares/auth.middleware');
 const { validateSchema } = require('../../middlewares/validation.middleware');
 const { registerSchema, loginSchema, editProfileSchema } = require('../../schemas/users.schema');
@@ -11,5 +11,6 @@ router.post('/login',    validateSchema(loginSchema),    login);
 router.get('/',          checkToken, getAll);
 router.get('/:userId',   checkToken, getById);
 router.put('/profile',   checkToken, validateSchema(editProfileSchema), edit);
+router.put('/change-password', checkToken, changePassword);
 
 module.exports = router;
